Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 10.3.7, 10.3.8
-
Fix Version/s: 10.3.9
-
Component/s: Data Definition - Alter Table, Storage Engine - InnoDB
-
Environment:CentOS7
Description
On 10.3.8 when you issue the following command:
ALTER TABLE `p1b` COMMENT 'drop fk test', DROP FOREIGN KEY p1b_ibfk_1 |
it generates the following error:
(conn=41) unexpected end of stream, read 0 bytes from 4 (socket was closed by server)
|
Note that this has worked without issue in all prior 10.1 and 10.2 versions we have used. Also, note that the following does NOT generate an error and does work correctly:
ALTER TABLE `p1b` DROP FOREIGN KEY p1b_ibfk_1 |
Also the following works correctly:
ALTER TABLE `p1b` COMMENT 'add fk test', ADD FOREIGN KEY (`p1`) REFERENCES `p1` (`p1_ID`) ON DELETE RESTRICT ON UPDATE CASCADE |
Attachments
Issue Links
- duplicates
-
MDEV-18771 crash when modifying column name and comment at the same time
-
- Closed
-
- relates to
-
MDEV-11369 Instant add column for InnoDB
-
- Closed
-
-
MDEV-13134 Introduce ALTER TABLE attributes ALGORITHM=NOCOPY and ALGORITHM=INSTANT
-
- Closed
-